Fixed search bar clipping with appbar

--- a/assets/css/appbar.scss
+++ b/assets/css/appbar.scss
@@ -2,6 +2,7 @@
 @import "material-box-shadow.scss";
 
 nav {
+    z-index: 500;
     .main {
         @include MaterialBoxShadow(4);
         position: fixed;
